pdf기능 구현, 알림 기능 구현